# resqtalk

./: .gitignore  README.md  docker-compose.yml  first-run.sh  prompt_template.txt
backend/: Dockerfile  app.py  pyproject.toml
backend/service/agents/: __init__.py  checklist_agent.py  comm_agent.py  memory_agent.py  voice_agent.py  voice_agent_base.py  voice_memory_agent.py
backend/service/data_models/: checklist.py  create_memory.py  disaster_context.py  generate_text.py  onboarding.py  set_prompt.py
backend/service/model/: __init__.py  comm_agent.py  hf_client.py  llm.py  memory_agent.py  ollama_client.py  voice_agent.py  voice_memory_agent.py
backend/service/prompts/: __init__.py  checklist_agent_prompts.py  comm_prompts.py  communication_agent_prompts.py  memory_agent_prompts.py  memory_prompts.py
backend/service/utils/: checklist_store.py  constants.py  environment.py  map_downloader.py  map_store.py  memory_store.py  nws_api.py  parsing_utils.py  prompt_store.py  prompts_store.py  user_info_store.py  wav_utils.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: api.ts  model.ts  types.ts
frontend/src/components/: BackIcon.tsx  Chatbot.css  Chatbot.tsx  GodModeNav.tsx  InfoBubble.css  InfoButton.css  InfoIcon.tsx  KeyboardIcon.tsx  LocationMap.tsx  MicIcon.tsx  ModeToggle.css  ModeToggle.tsx  MoonIcon.tsx  Navbar.css  Navbar.tsx  RobotIcon.tsx  SpeakerIcon.css  SpeakerIcon.tsx  SunIcon.tsx  ThemeToggle.css  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx  ThemeContextDefinition.ts  useTheme.ts
frontend/src/pages/: Agent.tsx  Begin.css  Begin.tsx  Chatbot.css  Chatbot.tsx  Checklist.css  Checklist.tsx  Dashboard.css  Dashboard.tsx  GodMode.css  GodMode.tsx  LiveAlerts.css  LiveAlerts.tsx  Maps.css  Maps.tsx  NotFound.css  NotFound.tsx  Onboarding.css  Onboarding.tsx  SOSTools.css  SOSTools.tsx  StoredInfo.css  (+1 more)
house-keeping/: backup.sh
(+9 files in other folders)
