[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-redis>=0.0.8",
    "ollama>=0.5.1",
    "pymongo>=4.13.2",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.35.0",
]
