[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "aiohttp>=3.12.14",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langfuse>=3.2.1",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-redis>=0.0.8",
    "librosa>=0.11.0",
    "ollama>=0.5.1",
    "pillow>=11.3.0",
    "pymongo>=4.13.2",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
